# cuda

./: .gitignore  README.md
trivial/: CMakeLists.txt  first.cu  properties.cu
